--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -745,7 +745,7 @@ lrn$par.set
 <td align="center">X</td>
 <td align="center"></td>
 <td align="center"></td>
-<td align="right">twoclass,multiclass,prob</td>
+<td align="right">prob</td>
 </tr>
 <tr>
 <td align="left">regr.blackboost</td>
@@ -815,7 +815,7 @@ lrn$par.set
 <td align="center"></td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">prob,twoclass,multiclass</td>
+<td align="right"></td>
 </tr>
 <tr>
 <td align="left">regr.kknn</td>
@@ -1022,7 +1022,7 @@ lrn$par.set
 <td align="center">X</td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">twoclass,multiclass,prob</td>
+<td align="right"></td>
 </tr>
 <tr>
 <td align="left">surv.coxph</td>
