--- a/tutorial/html/tune/index.html
+++ b/tutorial/html/tune/index.html
@@ -215,7 +215,7 @@ task (see the part on <a href="../train/">training</a> for more information):</p
 <pre class="prettyprint well"><code class="r">task = makeClassifTask(data=iris, target=&quot;Species&quot;)
 </code></pre>
 
-<p>Next, we need to create a [ParamSet]<a href="http://www.rdocumentation.org/packages/mlr/functions/makeParamSet.html">makeParamSet</a> object that describes
+<p>Next, we need to create a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeParamSet.html">ParamSet</a> object that describes
 the parameter space we wish to search. This is done through the function
 <a href="http://www.rdocumentation.org/packages/mlr/functions/makeParamSet.html">makeParamSet</a>. We add discrete parameters for the <code>C</code> and <code>sigma</code> parameter
 of the SVM to the parameter set. More details concerning parameter sets are
