--- a/tutorial/html/task/index.html
+++ b/tutorial/html/task/index.html
@@ -204,15 +204,15 @@ data set and all relevant information regarding the purpose of the
 task, e.g, the target variable.</p>
 <p>The tasks are organised in a hierarchy, with the generic
 <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> at the top.
-The concrete tasks that can be instantiated are [ClassifTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> for classification,
-[RegrTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> for regression, [SurvTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> for survival
-analysis, [CostSensTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> for
-cost-sensitive learning, and [ClusterTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> for clustering.</p>
+The concrete tasks that can be instantiated are <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">ClassifTask</a> for classification,
+<a href="&amp;Task">RegrTask</a> for regression, <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">SurvTask</a> for survival
+analysis, <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">CostSensTask</a> for
+cost-sensitive learning, and <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">ClusterTask</a> for clustering.</p>
 <p>There are dedicated functions to create these tasks given data and other
-relevant information. These are [makeClassifTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>,
-[makeRegrTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>,
-[makeSurvTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>, [makeCostSensTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>, and
-[makeClusterTask]<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.</p>
+relevant information. These are <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">makeClassifTask</a>,
+<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">makeRegrTask</a>,
+<a href="&amp;Task">makeSurvTask</a>, <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">makeCostSensTask</a>, and
+<a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">makeClusterTask</a>.</p>
 <p>In the following example, we define a classification task for the data
 set <code>BreastCancer</code> (from the package mlbench) and exclude the ID
 variable from all further model fitting and evaluation.</p>
