fixed minor issues

--- a/tutorial/html/integrated_learners/index.html
+++ b/tutorial/html/integrated_learners/index.html
@@ -237,10 +237,10 @@ weights are supported.</p>
 <p>Column <strong>Props</strong> shows further properties of the learning methods.
 For <em>classification</em> you can see if binary and/or multi-class problems are supported.
 In case of <em>survival analysis</em> the censoring type is shown. 
-For example <em>rcens</em> means that the Learner can deal with right censored data.
-Moreover, the type of prediction is displayed.
-For <em>classification</em> and <em>survival analysis</em> <em>prob</em> indicates that probabilities can be predicted.
-In case of regression <em>se</em> means that standard errors and the mean response can be predicted.</p>
+For example <em>rcens</em> means that the learning method can deal with right censored data.
+Moreover, the type of prediction is displayed where <em>prob</em> indicates that probabilities
+can be predicted.
+In case of <em>regression</em> <em>se</em> means that standard errors and the mean response can be predicted.</p>
 <h3 id="classification">Classification</h3>
 <table>
 <thead>
