fixed minor issues

--- a/tutorial/html/configureMlr/index.html
+++ b/tutorial/html/configureMlr/index.html
@@ -300,7 +300,7 @@ r = resample(&quot;classif.ksvm&quot;, iris.task, iris.rin)
 is already available in <strong>mlr</strong>, but the parameter is not implemented in <strong>mlr</strong> yet.
 If this is the case you might want to <a href="https://github.com/berndbischl/mlr#get-in-touch">contact us</a>
 or <a href="https://github.com/berndbischl/mlr/issues/new">open an issue</a> as well!
-But until then you can turn off <strong>mlr</strong>'s paramater checking like this:</p>
+But until then you can turn off <strong>mlr</strong>'s parameter checking like this:</p>
 <pre class="prettyprint well"><code class="r">lrn = makeLearner(&quot;classif.ksvm&quot;, newPar = 3)
 </code></pre>
 
