--- a/tutorial/html/measures/index.html
+++ b/tutorial/html/measures/index.html
@@ -243,7 +243,7 @@ or during feature selection.
 Columns <strong>Pred</strong>, <strong>Model</strong>, and <strong>Task</strong> indicate if the measure requires the <a href="http://www.rdocumentation.org/packages/mlr/functions/Prediction.html">Prediction</a>,
 the <a href="http://www.rdocumentation.org/packages/mlr/functions/makeWrappedModel.html">WrappedModel</a> and/or the <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.</p>
 <p><strong>Aggr</strong> shows the default aggregation method.</p>
-<p>In case of classification column <strong>MultiClass</strong> indicates if a measure is suitable for 
+<p>In case of <em>classification</em> column <strong>MultiClass</strong> indicates if a measure is suitable for 
 multi-class problems. If not the measure can only be used for binary classification problems.</p>
 <h3 id="classification">Classification</h3>
 <table>
